# chat_system

./: CMakeLists.txt
client/: main.c  main.h  main_view.c
client/common/: common.c  server.c  view.c
client/include/: common.h  server.h  view.h
client/service/: account_srv.c  connect_srv.c  friend_srv.c  listens.c
client/service/include/: account_srv.h  connect_srv.h  friend_srv.h  listens.h
client/view/: account_view.c  friend_view.c  home_view.c
client/view/include/: account_view.h  friend_view.h  home_view.h
service/: main.c  main.h
service/Persistence/: mysql_per.c
service/Persistence/include/: mysql_per.h
service/common/: common.c  controller.c  persistence.c
service/controller/: account_ctl.c  listen.c  monitor.c
service/controller/include/: account_ctl.h  listen.h  monitor.h
service/include/: common.h  controller.h  persistence.h
service/persistence/: account_sql.c  mysql_per.c
service/persistence/include/: account_sql.h  mysql_per.h
